--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="relative z-10">
   <div class="bg-black py-8 md:py-14 text-white">
     <div class="container mx-auto">
       <div class="flex">
@@ -38,12 +38,12 @@
                 data-device="mobile"
               >
                 <img
-                  src="assets/img/icons/partnership.svg"
+                  src="/assets/img/icons/partnership.svg"
                   alt="Icon Partnership"
                 />
                 <span class="flex-1">Partnership</span>
                 <img
-                  src="assets/img/icons/arrow-down-white.svg"
+                  src="/assets/img/icons/arrow-down-white.svg"
                   alt="Icon Arrow"
                   class="accordion-arrow md:hidden"
                 />
@@ -78,7 +78,7 @@
                 data-device="mobile"
               >
                 <img
-                  src="assets/img/icons/information.svg"
+                  src="/assets/img/icons/information.svg"
                   alt="Icon Information"
                 />
                 <span class="flex-1">Information</span>
@@ -142,7 +142,7 @@
       class="bg-white rounded-lg p-7 lg:p-10 relative w-full max-w-[500px] mx-auto shadow-modal"
     >
       <button class="toggle-menu-signup absolute top-4 right-4">
-        <img src="./assets/img/icons/close.svg" alt="Icon Close" class="p-4" />
+        <img src="/assets/img/icons/close.svg" alt="Icon Close" class="p-4" />
       </button>
       <div class="text-center">
         <h4 class="text-2xl mb-4 font-semibold">Welcome!</h4>
@@ -200,7 +200,7 @@
       class="bg-white rounded-lg shadow-2xl p-7 lg:p-10 relative w-full max-w-[500px] mx-auto"
     >
       <img
-        src="./assets/img/icons/close.svg"
+        src="/assets/img/icons/close.svg"
         alt="Icon Close"
         class="toggle-menu-mobile absolute right-4 top-4 p-4 z-10"
       />
@@ -210,7 +210,7 @@
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
-            src="./assets/img/icons/menu-images.svg"
+            src="/assets/img/icons/menu-images.svg"
             alt="Icon Images"
           />Images
         </a>
@@ -219,7 +219,7 @@
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
-            src="./assets/img/icons/menu-videos.svg"
+            src="/assets/img/icons/menu-videos.svg"
             alt="Icon Videos"
           />Videos
         </a>
@@ -228,7 +228,7 @@
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
-            src="./assets/img/icons/menu-vectors.svg"
+            src="/assets/img/icons/menu-vectors.svg"
             alt="Icon Vectors"
           />Vectors
         </a>
@@ -237,7 +237,7 @@
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
-            src="./assets/img/icons/menu-pricing.svg"
+            src="/assets/img/icons/menu-pricing.svg"
             alt="Icon Pricing"
           />Pricing
         </a>
