--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -11,42 +11,8 @@
         />
       </a>
     </div>
-    <div
-      class="header-searchbar max-md:-mr-20 z-10 hidden md:flex text-brand-body1 flex-1 items-center gap-2"
-    >
-      <form class="m-0 flex-1">
-        <div class="flex items-center justify-between h-[40px]">
-          <div class="flex flex-1 items-center justify-between relative h-full">
-            <button
-              type="button"
-              class="flex shrink-0 gap-2 items-center bg-brand-xl-lightgray px-5 cursor-pointer xl:min-w-[150px] h-full border border-brand-body1 rounded-lg rounded-r-none"
-            >
-              <img src="/assets/img/icons/image.svg" alt="Icon Image" />
-              <span class="hidden md:block text-sm flex-1">Images</span>
-              <img src="/assets/img/icons/arrow-down.svg" alt="Icon Arrow" />
-            </button>
-            <input
-              class="h-full w-full px-6 border-y border-brand-body1"
-              placeholder="Travel"
-            />
-          </div>
-          <a
-            href="/searchpage"
-            class="bg-black h-full flex items-center px-3 cursor-pointer rounded-lg rounded-l-none"
-          >
-            <img src="/assets/img/icons/search-outline.svg" alt="Icon Search" />
-          </a>
-        </div>
-      </form>
-      <button
-        type="button"
-        class="hidden md:block px-2 py-2 rounded-md hover:bg-brand-xl-lightgray hover:text-brand-accent cursor-pointer transition duration-300"
-      >
-        <img
-          src="/assets/img/icons/image-search.svg"
-          alt="Icon Image Reverse"
-        />
-      </button>
+    <div class="hidden md:flex flex-1">
+      {% include "components/searchbar.html" %}
     </div>
     <div class="hidden lg:block">
       <nav class="flex gap-2 xl:gap-4 items-center">
@@ -71,7 +37,40 @@
           >Pricing</a
         >
 
-        {% if loggedin %} icon {% else %}
+        {% if loggedin %}
+        <button
+          title="Account"
+          type="button"
+          class="text-sm px-4 py-2.5 rounded-md hover:bg-brand-xl-lightgray hover:text-brand-accent cursor-pointer transition duration-300 flex gap-3 items-center"
+        >
+          <svg
+            width="13"
+            height="16"
+            viewBox="0 0 13 16"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M6.33333 7.16671C6.9926 7.16671 7.63707 6.97121 8.18523 6.60494C8.7334 6.23867 9.16064 5.71807 9.41293 5.10899C9.66522 4.4999 9.73124 3.82968 9.60262 3.18307C9.474 2.53647 9.15653 1.94253 8.69036 1.47635C8.22418 1.01018 7.63024 0.692708 6.98363 0.564091C6.33703 0.435473 5.66681 0.501484 5.05772 0.753776C4.44863 1.00607 3.92804 1.43331 3.56177 1.98147C3.1955 2.52964 3 3.1741 3 3.83337C3 4.71743 3.35119 5.56528 3.97631 6.1904C4.60143 6.81552 5.44928 7.16671 6.33333 7.16671Z"
+            />
+            <path
+              d="M11.3333 15.5C11.5543 15.5 11.7663 15.4122 11.9226 15.2559C12.0789 15.0996 12.1667 14.8877 12.1667 14.6667C12.1667 13.1196 11.5521 11.6358 10.4581 10.5419C9.36416 9.4479 7.88043 8.83332 6.33333 8.83332C4.78624 8.83332 3.30251 9.4479 2.20854 10.5419C1.11458 11.6358 0.5 13.1196 0.5 14.6667C0.5 14.8877 0.587798 15.0996 0.744078 15.2559C0.900358 15.4122 1.11232 15.5 1.33333 15.5H11.3333Z"
+            />
+          </svg>
+
+          <svg
+            width="16"
+            height="8"
+            viewBox="0 0 16 8"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M7.98745 7.99738C7.72089 7.9979 7.46255 7.90495 7.2573 7.73466L0.412139 2.02333C0.179156 1.82944 0.0326414 1.55083 0.00482755 1.24878C-0.0229863 0.946735 0.0701785 0.645998 0.263827 0.412728C0.457475 0.179458 0.735743 0.0327637 1.03742 0.00491554C1.33909 -0.0229326 1.63946 0.0703465 1.87244 0.264233L7.98745 5.38159L14.1025 0.446997C14.2192 0.352113 14.3534 0.281257 14.4976 0.2385C14.6417 0.195742 14.7929 0.181928 14.9423 0.19785C15.0918 0.213773 15.2367 0.259117 15.3686 0.331278C15.5005 0.40344 15.6169 0.500995 15.7111 0.618336C15.8156 0.735786 15.8947 0.873573 15.9435 1.02307C15.9923 1.17256 16.0098 1.33053 15.9948 1.4871C15.9798 1.64366 15.9327 1.79544 15.8564 1.93292C15.7801 2.07039 15.6762 2.19062 15.5514 2.28605L8.70619 7.80319C8.49504 7.94657 8.24198 8.01494 7.98745 7.99738Z"
+            />
+          </svg>
+        </button>
+        {% else %}
         <button
           type="button"
           class="toggle-menu-signup text-sm px-4 py-2.5 rounded-lg bg-brand-accent text-white cursor-pointer transition duration-300"
