--- a/src/_includes/components/homepage/contentLibraryItem.html
+++ b/src/_includes/components/homepage/contentLibraryItem.html
@@ -1,5 +1,5 @@
 {% macro item(title, description, src) %}
-<div class="w-1/3">
+<div class="w-full md:w-1/3">
   <a href="/collection">
     <div class="relative rounded-lg overflow-hidden shadow-sm mb-6">
       <div
