--- a/src/_includes/components/homepage/heroCarousel.html
+++ b/src/_includes/components/homepage/heroCarousel.html
@@ -1,4 +1,6 @@
-<div class="absolute right-0 top-0 h-[1000px] overflow-y-hidden px-10 -mx-10">
+<div
+  class="absolute right-0 top-0 h-[1000px] overflow-y-hidden px-10 -mx-10 hidden lg:block w-[400px] xl:w-auto"
+>
   <div class="flex gap-6">
     <div
       class="flex flex-col gap-6 [&>img]:rounded-lg [&>img]:shadow-carousel col-hero-carousel"
