--- a/src/_includes/components/homepage/review.html
+++ b/src/_includes/components/homepage/review.html
@@ -1,11 +1,11 @@
 {% macro item(user, date, score, description) %}
 <div
-  class="w-1/3 rounded-lg bg-white p-10 shadow-[0px_4px_20px_0px_rgba(0,0,0,0.25)]"
+  class="w-full min-w-[245px] md:w-1/3 rounded-lg bg-white p-7 md:p-10 shadow-[0px_4px_20px_0px_rgba(0,0,0,0.25)] snap-center"
 >
   <header class="flex items-center gap-4 mb-1">
-    <div class="font-medium">{{user}}</div>
+    <div class="font-medium text-sm md:text-base">{{user}}</div>
     <div class="w-1 h-1 rounded-lg bg-brand-body1"></div>
-    <div class="font-inter text-sm font-light">{{date}}</div>
+    <div class="font-inter text-2xs md:text-sm font-light">{{date}}</div>
   </header>
   <div class="flex items-center gap-2 mb-2">
     <img src="../assets/img/icons/star.svg" />
@@ -14,7 +14,9 @@
     <img src="../assets/img/icons/star.svg" />
     <img src="../assets/img/icons/star.svg" />
   </div>
-  <div class="mb-4"><img src="../assets/img/icons/quoteup.svg" /></div>
-  <p class="font-inter text-sm leading-loose">{{description}}</p>
+  <div class="mb-4">
+    <img src="../assets/img/icons/quoteup.svg" alt="Quote Icon" />
+  </div>
+  <p class="font-inter text-xs md:text-sm leading-loose">{{description}}</p>
 </div>
 {% endmacro %}
