--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -30,7 +30,7 @@
             </ul>
           </div>
           <div class="order-2">
-            <div class="border-white border-b md:border-0">
+            <div class="accordion-item border-white border-b md:border-0">
               <h4
                 class="py-6 md:py-0 w-full flex items-center gap-2 text-xl group"
                 data-toggle="collapse"
@@ -48,7 +48,7 @@
                   class="accordion-arrow md:hidden"
                 />
               </h4>
-              <div class="hidden md:block" id="footer-partnership">
+              <div class="accordion-inner" id="footer-partnership">
                 <ul class="text-sm font-light [&>li]:py-2 -mt-2 md:mt-4 pb-6">
                   <li>
                     <a href="#">Become a Contributor</a>
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="order-3">
-            <div class="border-white border-b md:border-0">
+            <div class="accordion-item border-white border-b md:border-0">
               <h4
                 class="py-8 md:py-0 w-full flex items-center gap-2 text-xl group"
                 data-toggle="collapse"
@@ -88,7 +88,7 @@
                   class="accordion-arrow md:hidden"
                 />
               </h4>
-              <div class="hidden md:block" id="footer-information">
+              <div class="accordion-inner" id="footer-information">
                 <ul class="text-sm font-light [&>li]:py-2 -mt-2 md:mt-4 pb-6">
                   <li>
                     <a href="#">FAQ</a>
