--- a/src/_includes/components/homepage/sectionPopularSearch.html
+++ b/src/_includes/components/homepage/sectionPopularSearch.html
@@ -30,7 +30,7 @@
           />
         </svg>
       </h3>
-      <p class="font-inter text-xl mt-4 mb-6">
+      <p class="font-inter md:text-xl mt-4 mb-6">
         Quicker and smarter, browse our popular categories
       </p>
     </header>
