--- a/src/_includes/components/button.html
+++ b/src/_includes/components/button.html
@@ -1,6 +1,6 @@
 {% macro btn(label) %}
 <div
-  class="rounded-lg py-4 px-14 bg-brand-accent text-white inline-block text-xl cursor-pointer hover:bg-brand-accentDark transition"
+  class="rounded-lg py-3 lg:py-4 px-10 lg:px-14 bg-brand-accent text-white inline-block text-lg lg:text-xl cursor-pointer hover:bg-brand-accentDark transition"
 >
   {{ label }}
 </div>
