--- a/src/_includes/components/homepage/feature.html
+++ b/src/_includes/components/homepage/feature.html
@@ -1,5 +1,5 @@
 {% macro item(title, description, url) %}
-<div class="w-full text-center flex flex-col gap-8">
+<div class="w-full text-center flex flex-col gap-4 md:gap-8">
   <div class="h-44 flex items-center justify-center">
     <img src="{{url}}" alt="{{title}}" class="inline-block" />
   </div>
