--- a/src/_includes/components/homepage/sectionContent.html
+++ b/src/_includes/components/homepage/sectionContent.html
@@ -4,7 +4,7 @@
   <div class="container mx-auto relative">
     <div class="max-w-[600px]">
       <h3 class="typography-h3">Explore our content library</h3>
-      <p class="font-inter text-xl mt-4 mb-6">
+      <p class="font-inter md:text-xl mt-4 mb-6">
         Beautifuly shot, creatively made. Explore our wide library of assets or
         browse our curated collections.
       </p>
