--- a/src/_includes/components/homepage/sectionTrendingCollections.html
+++ b/src/_includes/components/homepage/sectionTrendingCollections.html
@@ -18,7 +18,7 @@
           />
         </svg>
       </h3>
-      <p class="font-inter text-xl mt-4 mb-6">
+      <p class="font-inter md:text-xl mt-4 mb-6">
         Check out the collections getting the most love
       </p>
     </header>
