--- a/src/_includes/components/homepage/sectionFeaturedContributors.html
+++ b/src/_includes/components/homepage/sectionFeaturedContributors.html
@@ -33,30 +33,33 @@
     </header>
   </div>
 
-  <div
-    class="flex gap-10 overflow-scroll snap-mandatory snap-x px-16 py-10 scrollbar-hide"
-  >
-    {{ Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
-    "../assets/img/contributors/contributor-1.jpg") }} {{
-    Contributor.item("steshnikova", "2,884", "Minimalistic abstract floral
-    seamless pattern.", "../assets/img/contributors/contributor-2.jpg") }} {{
-    Contributor.item("Subbotina Anna", "15,275", "Beautiful Mother And Baby
-    Outdoors. Nature", "../assets/img/contributors/contributor-3.jpg") }} {{
-    Contributor.item("VecorArt", "42,321", "Hiker man on mountain ledge at
-    morning", "../assets/img/contributors/contributor-4.jpg") }} {{
-    Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
-    "../assets/img/contributors/contributor-5.jpg") }} {{
-    Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
-    "../assets/img/contributors/contributor-1.jpg") }} {{
-    Contributor.item("steshnikova", "2,884", "Minimalistic abstract floral
-    seamless pattern.", "../assets/img/contributors/contributor-2.jpg") }} {{
-    Contributor.item("Subbotina Anna", "15,275", "Beautiful Mother And Baby
-    Outdoors. Nature", "../assets/img/contributors/contributor-3.jpg") }} {{
-    Contributor.item("VecorArt", "42,321", "Hiker man on mountain ledge at
-    morning", "../assets/img/contributors/contributor-4.jpg") }} {{
-    Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
-    "../assets/img/contributors/contributor-5.jpg") }}
+  <div class="scrolled-container">
+    <div
+      class="scrolled-inner flex gap-10 overflow-scroll snap-mandatory snap-x px-16 py-10 scrollbar-hide"
+    >
+      {{ Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
+      "../assets/img/contributors/contributor-1.jpg") }} {{
+      Contributor.item("steshnikova", "2,884", "Minimalistic abstract floral
+      seamless pattern.", "../assets/img/contributors/contributor-2.jpg") }} {{
+      Contributor.item("Subbotina Anna", "15,275", "Beautiful Mother And Baby
+      Outdoors. Nature", "../assets/img/contributors/contributor-3.jpg") }} {{
+      Contributor.item("VecorArt", "42,321", "Hiker man on mountain ledge at
+      morning", "../assets/img/contributors/contributor-4.jpg") }} {{
+      Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
+      "../assets/img/contributors/contributor-5.jpg") }} {{
+      Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
+      "../assets/img/contributors/contributor-1.jpg") }} {{
+      Contributor.item("steshnikova", "2,884", "Minimalistic abstract floral
+      seamless pattern.", "../assets/img/contributors/contributor-2.jpg") }} {{
+      Contributor.item("Subbotina Anna", "15,275", "Beautiful Mother And Baby
+      Outdoors. Nature", "../assets/img/contributors/contributor-3.jpg") }} {{
+      Contributor.item("VecorArt", "42,321", "Hiker man on mountain ledge at
+      morning", "../assets/img/contributors/contributor-4.jpg") }} {{
+      Contributor.item("Tan4ikk1", "15,275", "Spring garden paintings",
+      "../assets/img/contributors/contributor-5.jpg") }}
+    </div>
   </div>
+
   <div class="container mx-auto relative">
     <div class="mt-4 text-center">
       <p class="text-brand-body1">
