--- a/src/_includes/components/homepage/sectionTrendingCollections.html
+++ b/src/_includes/components/homepage/sectionTrendingCollections.html
@@ -22,8 +22,11 @@
         Check out the collections getting the most love
       </p>
     </header>
+  </div>
+
+  <div class="scrolled-container">
     <div
-      class="flex gap-6 overflow-scroll snap-mandatory snap-x scrollbar-hide flex-nowrap"
+      class="scrolled-inner flex gap-6 overflow-scroll snap-mandatory snap-x px-16 scrollbar-hide flex-nowrap"
     >
       {{ Collection.item("Christmas",
       "../assets/img/collections/christmas.webp") }}{{ Collection.item("Dog",
