--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -30,7 +30,9 @@
             </ul>
           </div>
           <div class="order-2">
-            <div class="accordion-item border-white border-b md:border-0">
+            <div
+              class="accordion-item open md:pointer-events-none border-white border-b md:border-0"
+            >
               <h4
                 class="py-6 md:py-0 w-full flex items-center gap-2 text-xl group"
                 data-toggle="collapse"
@@ -70,7 +72,9 @@
             </div>
           </div>
           <div class="order-3">
-            <div class="accordion-item border-white border-b md:border-0">
+            <div
+              class="accordion-item open md:pointer-events-none border-white border-b md:border-0"
+            >
               <h4
                 class="py-8 md:py-0 w-full flex items-center gap-2 text-xl group"
                 data-toggle="collapse"
