--- a/src/_includes/components/homepage/contentLibraryItem.html
+++ b/src/_includes/components/homepage/contentLibraryItem.html
@@ -1,11 +1,11 @@
 {% macro item(title, description, src) %}
 <div class="w-full md:w-1/3">
   <a href="/collection">
-    <div class="relative rounded-lg overflow-hidden shadow-sm mb-6">
+    <div class="relative rounded-lg overflow-hidden shadow-sm mb-6 h-[230px]">
       <div
         class="absolute h-full w-full bg-gradient-radial from-black/0 to-black/80 transition duration-500 ease-in-expo opacity-0 hover:opacity-50"
       ></div>
-      <img src="{{src}} " alt="" class="w-full" />
+      <img src="{{src}} " alt="" class="w-full h-full object-cover" />
     </div>
 
     <h5 class="typography-h5 mb-4">{{ title }}</h5>
