--- a/src/_includes/components/collection/content.html
+++ b/src/_includes/components/collection/content.html
@@ -5,7 +5,7 @@
         loading="lazy"
         src="https://picsum.photos/200/300.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -13,7 +13,7 @@
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -21,7 +21,7 @@
         loading="lazy"
         src="https://picsum.photos/300/280.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -29,7 +29,7 @@
         loading="lazy"
         src="https://picsum.photos/600/280.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -37,7 +37,7 @@
         loading="lazy"
         src="https://picsum.photos/400/400.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -45,7 +45,7 @@
         loading="lazy"
         src="https://picsum.photos/300/400.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -53,7 +53,7 @@
         loading="lazy"
         src="https://picsum.photos/320/500.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
 
@@ -62,7 +62,7 @@
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -70,7 +70,7 @@
         loading="lazy"
         src="https://picsum.photos/300/280.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -78,7 +78,7 @@
         loading="lazy"
         src="https://picsum.photos/600/280.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -86,7 +86,7 @@
         loading="lazy"
         src="https://picsum.photos/300/400.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -94,7 +94,7 @@
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
     <a href="#" class="grow">
@@ -102,7 +102,7 @@
         loading="lazy"
         src="https://picsum.photos/320/300.webp"
         alt="1"
-        class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+        class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
   </div>
