--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -16,7 +16,7 @@
                 <a href="#">About Us</a>
               </li>
               <li>
-                <a href="#">Pricing</a>
+                <a href="/pricing">Pricing</a>
               </li>
               <li>
                 <a href="#">
