--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -22,12 +22,12 @@
           >Images</a
         >
         <a
-          href="#"
+          href="/video-footage"
           class="text-sm px-3 py-2 rounded-md hover:bg-brand-xl-lightgray hover:text-brand-accent cursor-pointer transition duration-300"
           >Videos</a
         >
         <a
-          href="#"
+          href="/vector-illustrations"
           class="text-sm px-3 py-2 rounded-md hover:bg-brand-xl-lightgray hover:text-brand-accent cursor-pointer transition duration-300"
           >Vectors</a
         >
