--- a/src/_includes/components/homepage/sectionContent.html
+++ b/src/_includes/components/homepage/sectionContent.html
@@ -11,11 +11,11 @@
     </div>
     <div class="flex flex-col md:flex-row justify-between gap-10 xl:gap-32">
       {{ ContentLibraryItem.item("Stock Images", "12 million+ Stock Images",
-      "../assets/img/home/stock-images.jpg") }} {{
+      "../assets/img/home/stock-images.jpg", "/images") }} {{
       ContentLibraryItem.item("Stock Videos", "250k+ HD Videos",
-      "../assets/img/home/stock-videos.jpg") }} {{
+      "../assets/img/home/stock-videos.jpg", "/video-footage") }} {{
       ContentLibraryItem.item("Stock Vectors", "2.5+ million Vectors",
-      "../assets/img/home/stock-vectors.jpg") }}
+      "../assets/img/home/stock-vectors.jpg", "/vector-illustrations") }}
     </div>
   </div>
 </section>
