--- a/src/_includes/searchpage-aside.html
+++ b/src/_includes/searchpage-aside.html
@@ -1,6 +1,6 @@
 <aside class="aside-filters scrollable-inner">
   <button
-    class="toggle-filter-sidebar sidebar-arrow-indicator--fixed bg-black rounded-r-lg fixed top-[122px] left-0 h-11 w-9 flex items-center justify-center cursor-pointer"
+    class="toggle-filter-sidebar sidebar-arrow-indicator--fixed bg-black rounded-r-lg sticky top-[122px] left-0 h-11 w-9 flex items-center justify-center cursor-pointer"
   >
     <img src="/assets/img/icons/filters-open.svg" alt="Icon Arrow" />
   </button>
