--- a/src/_includes/components/homepage/contentLibraryItem.html
+++ b/src/_includes/components/homepage/contentLibraryItem.html
@@ -1,7 +1,9 @@
-{% macro item(title, description, src) %}
+{% macro item(title, description, src, link) %}
 <div class="w-full md:w-1/3">
-  <a href="/collection">
-    <div class="relative rounded-lg overflow-hidden shadow-sm mb-6 h-[230px]">
+  <a href="{{link}}">
+    <div
+      class="relative rounded-xl overflow-hidden shadow-brand-sm mb-6 h-[230px]"
+    >
       <div
         class="absolute h-full w-full bg-gradient-radial from-black/0 to-black/80 transition duration-500 ease-in-expo opacity-0 hover:opacity-50"
       ></div>
