--- a/src/_includes/components/homepage/heroCarousel.html
+++ b/src/_includes/components/homepage/heroCarousel.html
@@ -3,7 +3,7 @@
 >
   <div class="flex gap-6">
     <div
-      class="flex flex-col gap-6 [&>img]:rounded-lg [&>img]:shadow-carousel col-hero-carousel"
+      class="flex flex-col gap-6 [&>img]:rounded-xl [&>img]:shadow-carousel col-hero-carousel"
     >
       <img src="../assets/img/home/carousel/Rectangle 17-5.jpg" />
       <img src="../assets/img/home/carousel/Rectangle 17.jpg" />
@@ -16,7 +16,7 @@
       <img src="../assets/img/home/carousel/Rectangle 17-8.jpg" />
     </div>
     <div
-      class="-top-32 relative flex flex-col gap-6 [&>img]:rounded-lg [&>img]:shadow-carousel col-hero-carousel"
+      class="-top-32 relative flex flex-col gap-6 [&>img]:rounded-xl [&>img]:shadow-carousel col-hero-carousel"
     >
       <img src="../assets/img/home/carousel/Rectangle 17-3.jpg" />
       <img src="../assets/img/home/carousel/Rectangle 17-1.jpg" />
