--- a/src/_includes/components/homepage/review.html
+++ b/src/_includes/components/homepage/review.html
@@ -1,6 +1,6 @@
 {% macro item(user, date, score, description) %}
 <div
-  class="w-full min-w-[245px] md:w-1/3 rounded-lg bg-white p-7 md:p-10 shadow-[0px_4px_20px_0px_rgba(0,0,0,0.25)] snap-center"
+  class="w-full min-w-[245px] md:w-1/3 rounded-md bg-white p-7 md:p-10 shadow-[0px_4px_20px_0px_rgba(0,0,0,0.25)] snap-center"
 >
   <header class="flex items-center gap-4 mb-1">
     <div class="font-medium text-sm md:text-base">{{user}}</div>
