--- a/src/_includes/components/homepage/sectionPopularSearch.html
+++ b/src/_includes/components/homepage/sectionPopularSearch.html
@@ -142,7 +142,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/1.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -150,7 +150,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/2.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -158,7 +158,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/3.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -166,7 +166,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/4.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -174,7 +174,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/5.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -182,7 +182,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/6.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
       <a href="#" class="grow">
@@ -190,7 +190,7 @@
           loading="lazy"
           src="/assets/img/gallery/christmas/7.jpg"
           alt="1"
-          class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+          class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
         />
       </a>
     </div>
