--- a/src/_includes/searchpage-content.html
+++ b/src/_includes/searchpage-content.html
@@ -44,7 +44,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/1.jpg"
             alt="1"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -74,7 +74,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/2.jpg"
             alt="2"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -104,7 +104,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/3.jpg"
             alt="3"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -134,7 +134,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/4.jpg"
             alt="4"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -164,7 +164,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/5.jpg"
             alt="5"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -194,7 +194,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/6.jpg"
             alt="6"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -224,7 +224,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/7.jpg"
             alt="7"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -254,7 +254,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/8.jpg"
             alt="8"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -284,7 +284,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/9.jpg"
             alt="9"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -314,7 +314,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/10.jpg"
             alt="10"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
@@ -344,7 +344,7 @@
             loading="lazy"
             src="/assets/img/gallery/christmas/11.jpg"
             alt="11"
-            class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
+            class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
         </a>
       </div>
