add pricing page

--- a/src/_includes/components/button.html
+++ b/src/_includes/components/button.html
@@ -1,7 +1,7 @@
 {% macro btn(label, url) %}
 <a
   href="{{url}}"
-  class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white inline-block text-lg lg:text-xl cursor-pointer hover:bg-brand-accentDark transition"
+  class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white inline-block text-lg lg:text-xl cursor-pointer hover:bg-brand-accentDark transition text-center"
 >
   {{ label }}
 </a>
