--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="relative z-10">
+<footer id="page-footer" class="relative z-10">
   <div class="bg-black py-8 md:py-14 text-white">
     <div class="container mx-auto">
       <div class="flex">
@@ -87,7 +87,7 @@
                 />
                 <span class="flex-1">Information</span>
                 <img
-                  src="assets/img/icons/arrow-down-white.svg"
+                  src="/assets/img/icons/arrow-down-white.svg"
                   alt="Icon Arrow"
                   class="accordion-arrow md:hidden"
                 />
