--- a/src/_includes/components/collection/content.html
+++ b/src/_includes/components/collection/content.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
   <div class="flex flex-wrap gap-4 xl:gap-5 my-10">
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/200/300.webp"
@@ -8,7 +8,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
@@ -16,7 +16,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/300/280.webp"
@@ -24,7 +24,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/600/280.webp"
@@ -32,7 +32,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/400/400.webp"
@@ -40,7 +40,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/300/400.webp"
@@ -48,7 +48,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/320/500.webp"
@@ -57,7 +57,7 @@
       />
     </a>
 
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
@@ -65,7 +65,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/300/280.webp"
@@ -73,7 +73,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/600/280.webp"
@@ -81,7 +81,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/300/400.webp"
@@ -89,7 +89,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/400/200.webp"
@@ -97,7 +97,7 @@
         class="rounded-xl h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
       />
     </a>
-    <a href="#" class="grow">
+    <a href="/image" class="grow">
       <img
         loading="lazy"
         src="https://picsum.photos/320/300.webp"
