--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -210,7 +210,7 @@
       />
       <div>
         <a
-          href=""
+          href="/images"
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
@@ -219,7 +219,7 @@
           />Images
         </a>
         <a
-          href=""
+          href="/video-footage"
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
@@ -228,7 +228,7 @@
           />Videos
         </a>
         <a
-          href=""
+          href="/vector-illustrations"
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
@@ -237,7 +237,7 @@
           />Vectors
         </a>
         <a
-          href=""
+          href="/pricing"
           class="flex items-center gap-4 py-6 border-b border-brand-xl-lightgray"
         >
           <img
