--- a/src/_includes/components/homepage/review.html
+++ b/src/_includes/components/homepage/review.html
@@ -17,6 +17,8 @@
   <div class="mb-4">
     <img src="../assets/img/icons/quoteup.svg" alt="Quote Icon" />
   </div>
-  <p class="font-inter text-xs md:text-sm leading-loose">{{description}}</p>
+  <p class="font-inter text-xs md:text-sm leading-loose md:leading-loose">
+    {{description}}
+  </p>
 </div>
 {% endmacro %}
