--- a/src/_includes/components/homepage/sectionTrendingCollections.html
+++ b/src/_includes/components/homepage/sectionTrendingCollections.html
@@ -26,7 +26,7 @@
 
   <div class="scrolled-container">
     <div
-      class="scrolled-inner flex gap-6 overflow-scroll snap-mandatory snap-x px-16 scrollbar-hide flex-nowrap py-2"
+      class="scrolled-inner flex gap-6 overflow-scroll snap-mandatory md:snap-none snap-x px-16 scrollbar-hide flex-nowrap py-2"
     >
       {{ Collection.item("Christmas",
       "../assets/img/collections/christmas.webp") }}{{ Collection.item("Dog",
