--- a/src/_includes/searchpage-content.html
+++ b/src/_includes/searchpage-content.html
@@ -39,7 +39,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/1.jpg"
@@ -69,7 +69,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/2.jpg"
@@ -99,7 +99,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/3.jpg"
@@ -129,7 +129,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/4.jpg"
@@ -159,7 +159,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/5.jpg"
@@ -189,7 +189,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/6.jpg"
@@ -219,7 +219,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/7.jpg"
@@ -249,7 +249,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/8.jpg"
@@ -279,7 +279,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/9.jpg"
@@ -309,7 +309,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/10.jpg"
@@ -339,7 +339,7 @@
             class="folder-selected"
           />
         </div>
-        <a href="#" class="cursor-default">
+        <a href="/image">
           <img
             loading="lazy"
             src="/assets/img/gallery/christmas/11.jpg"
