--- a/src/_includes/components/section-review.html
+++ b/src/_includes/components/section-review.html
@@ -1,12 +1,10 @@
 {% import "components/homepage/review.html" as Review %}
 
-<section class="py-16">
+<section class="py-12">
   <div class="container mx-auto relative">
-    <h3 class="typography-h3 text-center mb-6 md:mb-12">
-      Words from our users:
-    </h3>
+    <h3 class="typography-h3 text-center mb-4">Words from our users:</h3>
   </div>
-  <div class="md:container mx-auto relative">
+  <div class="lg:container mx-auto relative">
     <div
       class="flex gap-10 xl:gap-20 overflow-scroll lg:overflow-visible snap-mandatory snap-x px-10 md:px-16 lg:px-0 l py-10 scrollbar-hide"
     >
