--- a/src/_includes/components/homepage/sectionContent.html
+++ b/src/_includes/components/homepage/sectionContent.html
@@ -1,6 +1,6 @@
 {% import "components/homepage/contentLibraryItem.html" as ContentLibraryItem %}
 
-<section class="py-16 bg-[#E3F4FF]/60 relative z-10">
+<section class="py-12 bg-[#E3F4FF]/60 relative z-10 mb-6">
   <div class="container mx-auto relative">
     <div class="max-w-[600px]">
       <h3 class="typography-h3">Explore our content library</h3>
