--- a/src/_includes/components/section-faq.html
+++ b/src/_includes/components/section-faq.html
@@ -1,6 +1,6 @@
 {% import "components/faq.html" as Faq %}
 
-<section class="py-16">
+<section>
   <div class="container mx-auto relative">
     <h3 class="typography-h3 text-center mb-6 md:mb-12">FAQ</h3>
   </div>
