--- a/src/_includes/searchpage-content.html
+++ b/src/_includes/searchpage-content.html
@@ -1,6 +1,4 @@
-<div
-  class="page-content container-fluid mx-auto min-h-screen relative mt-8 block"
->
+<div class="page-content container mx-auto min-h-screen relative mt-8 block">
   <div class="mb-6">
     <button
       class="toggle-filter-sidebar lg:hidden flex items-center gap-4 border-brand-body1 border rounded-lg mb-6 px-3 py-2"
